packages/cashc/test/compiler/InvalidSymbolTypeError/id_as_function.cash
contract Test() {
    return {
        hello(int a) {
            require(a(0) == 0);
        }
    }
}
